<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_test_communicate</name>
  <version>0.0.0</version>
  <description>Package for testing subscribeing, publishing</description>
  <maintainer email="is0578ri@ed.ritsumei.ac.jp">htm2323</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
